[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemigos/PlayerDetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Zombie.gd" type="Script" id=6]

[node name="Chase Player With Waypoints" type="Node2D"]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 1 )]

[node name="PositionLeft" type="Position2D" parent="."]

[node name="PositionRight" type="Position2D" parent="."]

[node name="Zombie" type="KinematicBody2D" parent="."]
collision_layer = 16
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zombie"]

[node name="Sprite" type="Sprite" parent="Zombie"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Zombie"]

[node name="Stats" parent="Zombie" instance=ExtResource( 5 )]

[node name="SoftCollision" parent="Zombie" instance=ExtResource( 2 )]

[node name="Hurtbox" parent="Zombie" instance=ExtResource( 3 )]
collision_layer = 8

[node name="Hitbox" parent="Zombie" instance=ExtResource( 4 )]
collision_mask = 4

[node name="RayCast2D" type="RayCast2D" parent="Zombie"]
enabled = true
cast_to = Vector2( 0, 11 )

[node name="RayCast2D2" type="RayCast2D" parent="Zombie"]
enabled = true
cast_to = Vector2( 0, 11 )
[connection signal="no_health" from="Zombie/Stats" to="Zombie" method="_on_Stats_no_health"]
[connection signal="area_entered" from="Zombie/Hurtbox" to="Zombie" method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Zombie/Hurtbox" to="Zombie" method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Zombie/Hurtbox" to="Zombie" method="_on_Hurtbox_invincibility_started"]
[connection signal="area_entered" from="Zombie/Hitbox" to="Zombie" method="_on_Hitbox_area_entered"]
